@@ -3,3 +3,4 @@
 cmake-build-debug/
 .clang-tidy
 **.o
+main
