@@ -1,6 +1,7 @@
 #include <stdio.h>
 #include <string.h>
 #include <stdbool.h>
+#include <time.h>
 #include "../include/graphics/artist.h"
 #include "../include/world/mapbuilder.h"
 #include "../include/utils/mathematics.h"
@@ -11,11 +12,23 @@ int main(int argc, char *argv[]) {
     printf("%s", CLEAR_SCREEN);
     bool doColoring = (argc > 1 && strcmp(argv[1], "--color") == 0);
 
-    Map newMap;
+    struct timespec timeNano;
+    timespec_get(&timeNano, TIME_UTC);
+    long long int timeSeedMilli = timeNano.tv_sec * 1000LL + timeNano.tv_nsec / 1000000LL;
 
-    initializeMap(&newMap);
 
-    prettyPrint("Hello, World!~~%%\n", doColoring);
+    // Generate the map
+    Map map;
+    map.mapSeed = timeSeedMilli & 0xffffffff; // NOLINT(*-narrowing-conversions)
+    map.globalX = 0;
+    map.globalY = 0;
+    initializeMap(&map);
+
+    // Print it to stdout
+    char mapStr[MAP_HEIGHT * (MAP_WIDTH + 1) + 1];
+    worldToString(&map, mapStr);
+
+    prettyPrint(mapStr, doColoring);
 
     return 0;
 }
